# smart-doorbell

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  motion_detect  motion_detect.cpp  tsched.cpp
include/: button_sound.hpp  get_light.hpp  led_handler.hpp  motion_detect.hpp  network_handler.hpp
lightlvl/: .gitignore  CMakeLists.txt  get_light  get_light.cpp
motion_detect/: .gitignore  motion_detect.cpp
networking/rx/: .gitignore  .receive.cpp.swp  CMakeLists.txt  receive.cpp
networking/tx/: .gitignore  .sendVideo.cpp.swp  CMakeLists.txt  sendVideo  sendVideo.cpp  sendVideo.cpp.save  sendVideo.cpp.save.1
schedule/: .gitignore  CMakeLists.txt  a.out  doorbell  scheduler.cpp  scheduler.cpp.save  tsched  tsched.cpp
schedule/examples/: psched.cpp  tsched.cpp
schedule/include/: gpio.hpp  video_stream.hpp
schedule/src/: get_light.cpp  gpio.cpp  led_handler.cpp  network_handler.cpp  video_stream.cpp
src/: button_sound.cpp  get_light.cpp  led_handler.cpp  motion_detect.cpp  network_handler.cpp  video_stream.cpp
