cmake_minimum_required(VERSION 2.8)
project( doorbell )
set(CMAKE_CXX_FLAGS "-std=c++0x -pthread")
find_package( Threads REQUIRED )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( doorbell tsched.cpp )
target_link_libraries( doorbell ${OpenCV_LIBS} Threads::Threads)
